# serve-rs

./: Cargo.toml  README.md
assets/: style.css
src/: directory.rs  main.rs
