[package]
name = "liveserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
actix-web = "4"
actix-files = "0.6.2"
ctrlc = "3.2.4"
exitcode = "1.1.2"
