[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
actix-web = "4"
ctrlc = "3.2.4"
exitcode = "1.1.2"
mime_guess = "2.0.4"
lazy_static = "1.4.0"
